--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
 <p>PowerShell integration for Visual Studio 2013 and 2015. </p>
 
-<p>More information on <a href="http://csharpening.net/?p=1697">Adam Driscoll's blog</a>.</p>
+<p>More information on <a href="https://wandering.life">Adam Driscoll's blog</a>.</p>
 
 <p>PowerShell Tools for Visual Studio currently offers the following features. </p>
 
